# Tcom

./: .gitignore  CHANGELOG.md  LICENSE  PLUGIN_API.md  README.md  index.html  package-lock.json  package.json  release_notes.md  startup_analysis.md  tsconfig.json  tsconfig.node.json
.github/workflows/: build.yml
config/: electron-builder.json5  tailwind.config.js  vite.config.mts
contexts/: context.md
design-system/tcom/: MASTER.md
docs/: data-parser-architecture.md
electron/: TcpService.ts  main.ts  preload-serial.ts  preload-system.ts  preload-theme.ts  preload-workspace.ts  preload.ts  timer-worker.ts
electron/ipc/: app.ipc.ts  com0com.ipc.ts  index.ts  monitor.ipc.ts  mqtt.ipc.ts  serial.ipc.ts  tcp.ipc.ts  theme-defaults.ts  theme-editor-window.ts  theme.ipc.ts  workspace.ipc.ts
electron/services/: AppUpdater.ts  MonitorPortHelper.ts  MonitorService.ts  MonitorWriteQueue.ts  PortScanner.ts  SerialService.ts  TcpService.ts  TimedSendManager.ts
electron/types/: serialport.types.ts
electron/utils/: FileWriteQueue.ts  high-res-timer.ts  reset-handler.ts  serialport-loader.ts  splash-window.ts  system-stats.ts  window-state.ts
examples/: hello-world.tpkg
public/: skeleton.css  splashscreen.html
skills/: .skills_store_lock.json
skills/afrexai-react-production/: _meta.json
skills/typescript-lsp/: _meta.json
skills/typescript-pro/: _meta.json
src/: App.tsx  ColorPickerApp.tsx  EyedropperApp.tsx  FullApp.tsx  ThemeEditorApp.tsx  boot-theme.js  index.css  main.tsx  tauri-plugins.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  default-dark.json  default-light.json  default-mono.json  default-pic.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  snap_layout.rs
src-tauri/src/commands/: app.rs  backup.rs  crash_report.rs  eyedropper.rs  fs_utils.rs  global_settings.rs  mod.rs  monitor.rs  mqtt.rs  profile.rs  serial.rs  shell.rs  tcp.rs  theme.rs  theme_editor.rs  updater.rs  window.rs  workspace.rs
src-tauri/src/commands/app/: com0com.rs  fonts.rs  info.rs  mod.rs
src-tauri/src/commands/monitor/: bridge.rs  mod.rs  state.rs  timer.rs
src-tauri/src/commands/parser/: api.rs  decoder.rs  framer.rs  mod.rs  schema.rs  storage.rs
src-tauri/src/commands/serial/: connection.rs  io.rs  mod.rs  scanner.rs  state.rs  timer.rs
src/context/: CommandContext.tsx  ConfirmContext.tsx  FeatureContext.tsx  FeatureContextShared.ts  I18nContext.tsx  PluginContext.tsx  PluginContextShared.ts  ProfileContext.tsx  SessionContext.tsx  SettingsContext.tsx  ThemeContext.tsx  ToastContext.tsx  featureApiFactory.ts  pluginApiFactory.ts  settingsConfigMigration.ts
src/features/: registry.ts
src/hooks/: editorLayoutActions.ts  editorLayoutTypes.ts  useAutoReply.ts  useAutoUpdate.ts  useColorPicker.ts  useCommandActions.ts  useCommandManager.ts  useDataBusListener.ts  useEditorLayout.ts  useFlushOnExit.ts  useHistory.ts  useLogSearchEngine.ts  usePortScanner.ts  useRxPacketHandler.ts  useSerialDataListener.ts  useSessionConnection.ts  useSessionDataSender.ts  useSessionLog.ts  useSessionManager.ts  useSystemMessage.ts  useThemeEffects.ts  useWindowState.ts  useWorkspace.ts
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/lib/: EventBus.ts  crashReporter.ts  feishuCard.ts  migrateLegacyData.ts
src/plugins/: registry.ts
src/services/: GraphService.ts  MessagePipeline.ts  confirmManager.ts  toastManager.ts
src/store/: useDashboardStore.ts  useDataBusStore.ts  useParserStore.ts
src/styles/: animations.css  glass.css  reset.css  themes.css  variables.css  vendors.css
src/themes/: componentTokenMap.ts  dark.ts  hc.ts  index.ts  light.ts  one-dark-vivid.ts  types.ts
src/tokens/: index.ts
src/types/: autoReply.ts  command.ts  module.ts  plugin.ts  session.ts  theme.ts  token.ts
src/utils/: InputParser.ts  com0com.ts  commandPreview.ts  commandUtils.ts  composeProviders.ts  crc.ts  format.ts  keybindings.ts  mqttUtils.ts  naming.ts  tokenTraversal.ts
(+155 files in other folders)
