[package]
name = "tcom"
version = "0.0.2"
description = "A powerful serial port debugging tool."
authors = ["thedongcc"]
license = "MIT"
repository = "https://github.com/thedongcc/Tcom"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "image-png", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
open = "5"
serialport = "4"
rumqttc = { version = "0.24", features = ["websocket"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
winreg = "0.55"
# HTTP 客户端 — 崩溃上报到飞书 Webhook
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# 跨平台系统目录 — Panic Hook 写崩溃标记文件
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_UI_Shell", "Win32_UI_HiDpi", "Win32_Media", "Win32_System_Threading"] }
