[package]
name = "tcom"
version = "0.0.2"
description = "A powerful serial port debugging tool."
authors = ["thedongcc"]
license = "MIT"
repository = "https://github.com/thedongcc/Tcom"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "image-png", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
open = "5"
serialport = "4"
rumqttc = { version = "0.24", features = ["websocket"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
winreg = "0.55"
# HTTP 客户端 — 崩溃上报到飞书 Webhook
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# 跨平台系统目录 — Panic Hook 写崩溃标记文件
dirs = "6"
# ZIP 打包 — Profile/全量备份导出导入
zip = { version = "2", default-features = false, features = ["deflate"] }
# 屏幕取色 — 吸管功能截取光标周围像素
xcap = "0.9.3"
# 图像处理 — 吸管截图裁剪与像素采样
image = "0.25.6"
# Base64 编码 — 吸管截图转 data:image URI 传前端
base64 = "0.22.1"
# URL 编码 — data URI 安全编码
urlencoding = "2.1.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_UI_Shell", "Win32_UI_HiDpi", "Win32_Media", "Win32_System_Threading"] }
